Sonar: updates to core/daemon